@@ -218,8 +218,10 @@ module Nadoka
       end
 
       # part channel
+      chs = @state.current_channels.keys
       @config.login_channels.each{|ch|
-        if @config.channel_info[ch]
+        ch = ch.downcase
+        if @config.channel_info[ch] && chs.find{|c| c == ch}
           if @config.channel_info[ch][:part_message]
             send_to_server Cmd.part(ch, @config.channel_info[ch][:part_message])
           else
